Fix plus sign overlapping with navigation on buddies page

--- a/src/css/utils.css
+++ b/src/css/utils.css
@@ -38,3 +38,7 @@
   bottom: 0;
   position: fixed;
 }
+
+.z-100 {
+  z-index: 100;
+}
